Fix overflow issue in book page

--- a/src/components/Book/Block/index.module.scss
+++ b/src/components/Book/Block/index.module.scss
@@ -21,7 +21,7 @@
     border-radius: 2rem;
     display: inline-grid;
     grid-auto-flow: column;
-    grid-auto-columns: min-content 15rem;
+    grid-auto-columns: min-content 1fr;
     grid-gap: 1rem;
     padding: 1rem;
     font-weight: bold;
